Stop tag detection from expiring the frames it dispatches on
Lateral motion and the climb died on "Detected camera frame expired
before command dispatch". The snapshot reached _guard_dispatch already
350-440 ms old, and 500 ms is the whole freshness budget, so every
attitude command was a coin flip. Round trips to the phone were never
the cause: median 31 ms, max 62 ms over the failing flight.

MixedDetector.detect cost 280 ms per 1080p frame and starved the
decoder that produced its next frame. Two thirds of that was waste:

  cv2.undistort rebuilds the rectify maps on every call (50 ms), and
  the floor pose pass undistorted the same raw frame a second time
  before detecting the same tags again. pupil_apriltags also defaults
  to nthreads=1 on an 8-core machine.

Cache the maps and use cv2.remap, hand the already-undistorted pixels
to the pose pass, and give the detector four threads. Detection drops
to 40 ms, a 6.9x cut that leaves the frame far inside the budget.

None of this trades accuracy for speed. remap reproduces undistort
bit-for-bit (max pixel difference 0) and the pose pass now sees the
identical image it used to recompute, so detections are unchanged
across all 175 saved field captures.

Video delivery starved for a different reason: openReader() replayed
a buffer that began mid-GOP, so the decoder discarded everything up
to the first key frame. Trim to the newest key frame on open and cap
the buffer. Ground test went from 0.03% to 100% of frames delivered
with first frame at 1.23 s instead of 4.63 s.

Also log the traceback when a run is interrupted. The bare message
named no call site, which is why these failures stayed unattributable
in the field, and it is what identified this one.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>